--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>VueJS</title>
+    <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui-grid/grid.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
@@ -19,12 +20,12 @@
     </form>
 
     <h3>Results</h3>
-    <div id="results">
-        <img v-for="item in resultList"v-bind:src="item.fixed_height.url">
-
+    <div id="results" class="ui grid">
+        <div v-for="item in resultList"
+             class="sixteen wide mobile four wide tablet three wide computer two wide large screen column">
+                <img v-bind:src="item.fixed_height.url">
+        </div>
     </div>
-
-    <!--<iframe src="//giphy.com/embed/SxQDc2jZchCgM" width="480" height="368" frameBorder="0" class="giphy-embed"></iframe>-->
 </div>
 </body>
 <script src="main.js"></script>
