Catch-all height

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h3>Results</h3>
     <div id="results" class="ui grid">
         <div v-for="item in resultList"
-             class="sixteen wide mobile four wide tablet three wide computer two wide large screen column">
+             class="five wide mobile four wide tablet three wide computer two wide large screen column">
                 <img v-bind:src="item.fixed_height.url">
         </div>
     </div>
