--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui-loader/loader.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
 </head>
 
 <body>
