Testing a few things for Pages

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>VueJS</title>
-    <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui-container/container.min.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui-dimmer/dimmer.min.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui-grid/grid.min.css">
-    <link rel="stylesheet" type="text/css" href="node_modules/semantic-ui-loader/loader.min.css">
+    <link rel="stylesheet" type="text/css" href="./assets/semantic-ui-container/container.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/semantic-ui-dimmer/dimmer.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/semantic-ui-grid/grid.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/semantic-ui-loader/loader.min.css">
     <link rel="stylesheet" type="text/css" href="main.css">
 
     <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
