--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>VueJS</title>
-    <link rel="stylesheet" type="text/css" href="./assets/semantic-ui-container/container.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/semantic-ui-container/container.min.css">
     <link rel="stylesheet" type="text/css" href="assets/semantic-ui-dimmer/dimmer.min.css">
     <link rel="stylesheet" type="text/css" href="assets/semantic-ui-grid/grid.min.css">
     <link rel="stylesheet" type="text/css" href="assets/semantic-ui-loader/loader.min.css">
