--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="assets/semantic-ui-dimmer/dimmer.min.css">
     <link rel="stylesheet" type="text/css" href="assets/semantic-ui-grid/grid.min.css">
     <link rel="stylesheet" type="text/css" href="assets/semantic-ui-loader/loader.min.css">
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="assets/main.css">
 
     <script src="https://unpkg.com/vue/dist/vue.min.js"></script>
 </head>
@@ -49,6 +49,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"
         integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
-<script src="notify.min.js"></script>
+<script src="assets/notify.min.js"></script>
 <script src="main.js"></script>
 </html>
